--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
     <script defer src="index.js"></script>
+
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <title>Eagleowl Test</title>
   </head>
   <body>
@@ -15,7 +21,6 @@
       <hr />
       <div class="padded-card">
         <div class="stats__container">
-          <div class="stat__title">Stats</div>
           <div class="dashboard__items">
             <div class="dashboard__item">
               <div id="totalOrders" class="dashboard__number">-</div>
@@ -33,7 +38,13 @@
         <div id="userItems" class="user__items">-</div>
       </div>
       <div class="padded-card pt-3">
-        <div class="stat__title">Distribution</div>
+        <div class="stat__title ma-0">Distribution chart</div>
+        <div id="barchartBody">
+          <div style="padding-top: 16px;">-</div>
+        </div>
+      </div>
+      <div class="padded-card pt-3">
+        <div class="stat__title">Distribution table</div>
         <table class="table">
           <thead class="table__head">
             <tr class="table__head-row">
@@ -55,10 +66,6 @@
             </tr>
           </tbody>
         </table>
-      </div>
-      <div class="padded-card pt-3">
-        <div class="stat__title">Distribution graph</div>
-        <div id="graphBody" class="user__items">-</div>
       </div>
     </div>
   </body>
